<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
        >


    <LinearLayout android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content">


        <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_texttosend"/>
        <EditText
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/ed_texttosend"
                android:minLines="5"
                android:inputType="textMultiLine"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>


        <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_numbertosend"/>
        <EditText
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/ed_numbertosend"
                android:layout_width="fill_parent"
                android:inputType="phone"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_targetemail"/>
        <EditText
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/ed_mailtosend"
                android:layout_width="fill_parent"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"/>



        <Button
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/btn_sendsms"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_sendsms"
                />
        <Button
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/btn_senddatasms"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_senddatasms"
                />


        <Button
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/btn_sendemail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_sendemail"
                />


        <Button
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:id="@+id/btn_getmessagesfromicc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_getmessagesfromicc"
                />

        <Button
                android:id="@+id/btn_readaddressbookinfo"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:text="@string/btn_readaddressbookinfo"
                />

        <Button
                android:id="@+id/btn_readsmsinfo"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:text="@string/btn_readsmsinfo"
                />

        <Button
                android:id="@+id/btn_contentproviderinfo"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:text="@string/btn_contentproviderinfo"
                />


    </LinearLayout>

</ScrollView>